create table regions (
    id bigserial primary key,
    name varchar(255) not null unique
);
